# OperationSpectre

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTO_STARTUP.md  LICENSE  MCP_USAGE.md  Makefile  PERFORMANCE_ALWAYS_ON.md  PERFORMANCE_IMPLEMENTATION.md  README.md  check_live_hosts.sh  docker-compose.full.yml  fix_sandbox.bat  pyproject.toml
.pi/skills/: SKILLS_INDEX.md
containers/: Dockerfile  Dockerfile.base  Dockerfile.mcp  burpsuite-agent.sh  burpsuite-playbook.sh  burpsuite-wrapper.sh  ctf-playbook.sh  docker-compose.yml  docker-entrypoint.sh  msf-database.yml  osint-playbook.sh  owasp-top10-playbook.sh  rate-limit-helpers.sh  scan-helpers.sh
containers/wrappers/: aircrack-run  cme-run  evil-winrm-run  hashcat-run  hydra-run  john-run  msf-run  pwn-run  responder-run  steg-run  vol-run  z3-run
docs/: BURP_SUITE_VERIFICATION.md  CONTAINER_PLAYBOOKS.md  DOCUMENTATION_INDEX.md  FULL_ARSENAL_README.md  MIGRATION_GUIDE.md  PIPELINES.md  PLAN.md  QUICK_START.md  QUICK_START_MCP.md  README.md  opspectre-tools.md  web-app-audit.md
docs/about/: parallel_execution.md
docs/getting-started/: QUICK_START.md
docs/playbooks/: BURP_SUITE_VERIFICATION.md  (+1 more)
exploits/: phase-2-summary.txt  vulnerability-assessment-findings.txt
opspectre/: _ui.py  cli_commands.py  mcp.py  mcp_server.py  performance.py
pipelines/: ctf-crypto.yaml  ctf-web.yaml  parallel_pentest.yaml  pentest.yaml
scripts/: build.sh  manage.py  mcp_server.py  migrate.py  parallel_demo.py  parallel_pipeline_runner.py  pipeline_runner.py  start-full.py  start-opspectre.sh  stop-full.py  test-full-arsenal.sh
tests/: conftest.py  test_cli_commands.py  test_cli_parser.py  test_config_coercion.py  test_config_persistence.py  test_docker_runtime.py  test_execution_log.py  test_file_ops.py  test_performance.py  test_run_manager.py  test_sandbox_ops.py  test_tool_server.py  test_tools.py  test_ui.py
(+59 files in other folders)
