[project]
name = "opspectre"
version = "0.1.0"
description = "CLI toolbox for sandboxed tool execution"
readme = { text = "CLI toolbox for sandboxed tool execution", content-type = "text/plain" }
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "OPERATIONSPECTRE" },
]
keywords = [
  "toolbox",
  "sandbox",
  "docker",
  "cli",
  "agent",
  "automation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "docker>=7.1.0",
  "requests>=2.32.0",
  "pydantic>=2.11.3",
  "httpx>=0.28.0",
  "pyyaml>=6.0",
]

[project.scripts]
opspectre = "opspectre.main:main"

[project.optional-dependencies]
sandbox = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.20",
  "playwright>=1.40.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.13",
  "pyright>=1.1.401",
  "bandit>=1.8.3",
  "pytest>=8.4.0",
  "pytest-cov>=6.1.1",
  "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opspectre"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".git", ".mypy_cache", ".pytest_cache", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["S101", "COM812", "ISC001", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
